--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="d-flex justify-content-center mt-2">
-        <button type="submit" class="btn btn-danger me-4">Cancelar</button>
+        <button type="submit" class="btn btn-danger me-4" routerLink='/entrar'>Cancelar</button>
         <button type="submit" class="btn btn-success">Cadastrar</button>
     </div>
    </div>
