--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -9,23 +9,23 @@
         <label for="nome">Nome</label>
         <input class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome">
     </div>
-    <div class="form-group">
+    <div class="form-group mt-3">
         <label for="usuario">Usuário</label>
         <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
     </div>
-    <div class="form-group">
+    <div class="form-group mt-3">
         <label for="foto">Link da Foto</label>
         <input class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto">
     </div>
-    <div class="form-group">
+    <div class="form-group mt-3">
         <label for="senha">Senha</label>
         <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
     </div>
-    <div class="form-group">
+    <div class="form-group mt-3">
         <label for="confirmSenha">Confirmar Senha</label>
         <input class="form-control" type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha">
     </div>
-    <div class="form-group">
+    <div class="form-group mt-3">
         <label for="tipo">Tipo de Usuário</label>
         <select class="form-control" name="tipo" id="tipo">
         <option>Selecione um tipo de usuário</option>
