--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -9,14 +9,14 @@
 
                     <div class="form-group">
                         <label for="usuario">Usuário</label>
-                        <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
+                        <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
                     </div>
                     <div class="form-group">
                         <label for="usuario">Senha</label>
-                        <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
+                        <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
                     </div>
                     <div class="d-flex justify-content-center mt-2">
-                        <button type="submit" class="btn btn-info">Entrar</button>
+                        <button type="submit" class="btn btn-info" (click)='entrar()'>Entrar</button>
                     </div>
                     <hr class="mt-5 mb-5">
                     <p class="text-center">Não tem uma conta? <a routerLink='/cadastrar'>Cadastre-se</a></p>
