--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,9 +1,9 @@
-<footer class="page-footer font-small bg-secondary pt-4">
+<footer class="page-footer font-small pt-4 bgcolor">
 
     <div class="container">
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center">
-<h4 class="text-white">Siga-nos nas redes sociais</h4>
+<h4 class="text-dark">Siga-nos nas redes sociais</h4>
             </div>
         </div>
     </div>
