--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,1 +1,99 @@
-<p>inicio works!</p>
+<div class="container-fluid bg-dark">
+
+    <div class="row d-flex align-items-center">
+        <div class="col-md-6">
+
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-8 txtcolor">
+                    <h1 class='fs-40'>Seja bem vindo(a) a maior rede social da Galáxia!</h1>
+                    <h5 class='fs-18'>Expresse aqui seus pensamentos e opiniões.</h5>
+                </div>
+            </div>
+
+            <div class="row f-flex justify-content-center mt-3 mb-5">
+                <div class="col-md-8">
+                    <button class="btn btn-outline-warning fw-bold me-2" data-bs-toggle="modal"
+                        data-bs-target="#novaPostagem">Nova Postagem</button>
+                    <a class="btn btn-outline-warning fw-bold" href="#postagens">Ver Postagens</a>
+                </div>
+            </div>
+
+
+
+
+        </div>
+
+        <div class="col-md-6 d-flex justify-content-center">
+            <img src="https://i.imgur.com/p50LWeR.png" alt="alienigena utilizando painel de controle" width="500px"
+                height="500px">
+        </div>
+
+    </div>
+
+</div>
+
+<div class="container mb-5 mt-5" id="postagens">
+    <ul class="nav nav-tabs r d-flex justify-content-center" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active text-warning fw-bold" id="todasPostagens-tab" data-bs-toggle="tab"
+                data-bs-target="#todasPostagens" type="button" role="tab" aria-controls="todasPostagens"
+                aria-selected="true">Todas as Postagens</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link text-warning fw-bold" id="minhasPostagens-tab" data-bs-toggle="tab"
+                data-bs-target="#minhasPostagens" type="button" role="tab" aria-controls="minhasPostagens"
+                aria-selected="false">Minhas postagens</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link text-warning fw-bold" id="postagemTema-tab" data-bs-toggle="tab"
+                data-bs-target="#postagemTema" type="button" role="tab" aria-controls="postagemTema"
+                aria-selected="false">Postagens por tema</button>
+        </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="todasPostagens-tab">
+            Todas as Postagens</div>
+        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens-tab">Minhas
+            postagens </div>
+        <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="postagemTema-tab">Postagens por
+            tema</div>
+    </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="novaPostagem" tabindex="-1" aria-labelledby="novaPostagemLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="TituloModalCentralizado">Nova Postagem</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+
+                <div class="form-group">
+                    <label for="titulo">Título</label>
+                    <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+                </div>
+
+
+                <div class="form-group">
+                    <label for="texto">Texto</label>
+                    <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
+                </div>
+
+                <div class="form-group">
+                    <label for="texto">Texto</label>
+                    <select name="tema" id="tema"></select>
+                </div>
+
+               
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-success">Publicar</button>
+            </div>
+        </div>
+    </div>
+</div>
