--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+<nav class="navbar navbar-expand-lg navbar-light bgcolor">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,15 +7,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center">
                 <li class="nav-item">
-                    <img src="https://s.clipartkey.com/mpngs/s/76-762478_princess-leia.png" alt="imagem do user"
+                    <img src="{{foto}}" alt="imagem do user"
                         width="50px" height="50px" class="img-fluid rounded-circle">
                 </li>
                 <li class="nav-item ps-3">
-                    <p class="m-0 fw-bold text-white fs-16">Nome do Usuário</p>
+                    <p class="m-0 fw-bold text-dark fs-16">Olá, {{nome}}</p>
                 </li>
                 <li class="nav-item ps-3">
                     <a href="">
-                        <p class="m-0 fw-bold text-white fs-16">
+                        <p class="m-0 fw-bold text-dark fs-16">
                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                         </p>
                     </a>
@@ -24,7 +24,7 @@
 
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex align-items-center">
                 <li class="nav-item ps-3">
-                    <a class="m-0 fw-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+                    <a (click)='sair()'class="m-0 fw-bold text-dark fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
                 </li>
             </ul>
         </div>
