--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -83,8 +83,10 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="texto">Texto</label>
-                    <select name="tema" id="tema"></select>
+                    <label for="texto">Escolha um tema ou <a href=""> cadastre um novo</a>: </label>
+                    <select name="tema" id="tema" class="form-control">
+                        <option value="">Temas</option>
+                    </select>
                 </div>
 
                
