--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="texto">Escolha um tema ou <a href=""> cadastre um novo</a>: </label>
+                    <label for="texto">Escolha um tema ou <a routerLink='/tema' data-bs-dismiss="modal"> cadastre um novo</a>: </label>
                     <select name="tema" id="tema" class="form-control">
                         <option value="">Temas</option>
                     </select>
