--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -45,12 +45,12 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor='let i of listaTemas'>
-                    <th>{{i.id}}</th>
-                    <td>{{i.descricao}}</td>
+                  <tr *ngFor='let item of listaTemas'>
+                    <th>{{item.id}}</th>
+                    <td>{{item.descricao}}</td>
                     <td class="d-flex justify-content-end">
-                      <button class="btn btn-warning me-3">Editar</button>
-                      <button class="btn btn-danger">Apagar</button>
+                      <button class="btn btn-warning me-3" [routerLink]="['/tema-edit', item.id]">Editar</button>
+                      <button class="btn btn-danger" [routerLink]="['/tema-delete', item.id]">Apagar</button>
                     </td>
                     
                   </tr>                  
